[project]
name = "kube-envx"
version = "0.2.1"
description = ""
authors = [
    {name = "ohmycoffe",email = "ohmycoffe1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "questionary (>=2.1.1,<3.0.0)",
]

[tool.poetry]
packages = [
    { from = "src", include = "kenvx" },
]
[tool.poetry.scripts]
kenvx = "kenvx.__main__:app"
envx = "kenvx.__main__:deprecated_entry"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
