[project]
name = "kube-envx"
version = "0.3.0"
description = "Extract environment variables from Kubernetes resources in dotenv format"
authors = [
    {name = "ohmycoffe",email = "ohmycoffe1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "questionary (>=2.1.1,<3.0.0)",
]

[project.scripts]
kenvx = "kenvx.__main__:app"
envx = "kenvx.__main__:deprecated_entry"

[tool.poetry]
packages = [
    { from = "src", include = "kenvx" },
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
pytest = "^9.0.3"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
